--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,11 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- RecyclerView -->
+    <!-- Itens -->
+    <string name="txtNome_itens">Nome: </string>
+    <string name="txtSabor_itens">Sabor: </string>
+    <string name="txtValor_itens">R$: </string>
+    <string name="txtValor2_itens">Preço (R$): </string>
 </resources>
